# experience-lab-data-capture

./: .gitmodules  Brandon Scripting Instructions  MacOS Install Guide  README.md  Scripting Instructions  install_packages.sh
Sprint 1/: Experience Lab Notes  Sprint 1 Demo Day Slides.pptx  Timesheet.txt
Sprint 4/: Link to Timesheet (FIXED)  Meeting Notes  Rough Draft for Experience Lab Pitch
Sprint 4/workspace/: README.txt  ROS2_NOTES  cam_controller.sh  recordcamcompressed.sh  recordcamraw.sh  startcam.sh
Sprint 4/workspace/scripts that caused intracranial hemorrhaging/: SRtest.sh  camcontrol.py  control_cam.sh  recordcontrol.sh  rqtsudo.sh  sr2.sh  startandrecord.sh
ros/src/bag_tools/: package.xml  (+1 more)
ros2/: # Keystroke Input Setup Guide.md
ros2/1.Ros2 Basics Guide/: 1.Ros 2 Overview  10. Misc  2. Key Concepts of Ros2  3.Ros2 Workspaces  4. Ros2 Nodes  5.Communication ros2  6.Ros2 Tools  7. Best Practices  8. Debugging  9. Ecosystem
ros2/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2/log/: latest_build  latest_list
ros2/rosdep/: my_custom_rosdep_rules.yaml
ros2/src/my_screen_recorder/: CMakeLists.txt  my_screen_recorder_node.py  package.xml
ros2/src/my_screen_recorder/screen_recorder documentation and examples/: 1.Screen recorder Documenation
scripts/: CsvFileIO.py  annotation_launcher.py  extract_streams.py  generate_histograms.py  impute_csv.py  video_to_bag.py
sprint_3/: Link to Timesheet  progress_check_client_feedback  progress_check_goals  progress_check_reflection
(+160 files in other folders)
