<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_screen_recorder</name>
  <version>0.0.0</version>
  <description>ROS 2 screen recorder package</description>
  <maintainer email="clgott@memphis.edu">calvingott</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>ament_cmake</depend>
  <depend>ament_cmake_python</depend>
  <depend>rclpy</depend>
  <depend>ffmpeg-python</depend>
  <depend>mss</depend>
  <depend>numpy</depend> 
  <depend>cv_bridge</depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <ament_python
    executable="my_screen_recorder_node"
  />
</package>
